# esp-clock

./: .clang-format  .gitignore  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-build.sh  env.sh
main/: CMakeLists.txt  Kconfig.projbuild  index.html  main.cpp
main/inc/: ConfigManager.hpp  DisplayController.hpp  DisplayManager.hpp  Font5x7.hpp  MAX7219.hpp  Quotes.hpp  TimeSync.hpp  WeatherFetcher.hpp  WebServer.hpp  WifiManager.hpp
main/src/: ConfigManager.cpp  DisplayController.cpp  DisplayManager.cpp  Font5x7.cpp  MAX7219.cpp  Quotes.cpp  TimeSync.cpp  WeatherFetcher.cpp  WebServer.cpp  WifiManager.cpp
